# backblaze-b2-rs

./: .gitignore  Cargo.toml  README.md
examples/simple/: main.rs
examples_/simple/: file1.txt  main.rs
src/: auth.rs  authorize.rs  buckets.rs  bytes_string.rs  capabilities.rs  client.rs  context.rs  files.rs  lib.rs  prelude.rs  serde_future.rs  stream_util.rs
src/api/: mod.rs
src/api/authorize/: capabilities.rs  keys.rs  mod.rs
src/api/buckets/: bucket_type.rs  mod.rs
src/api/files/: action.rs  mod.rs
src/api/files/download/: future.rs  mod.rs  stream.rs
src/api/files/upload/: large.rs  mod.rs
src/auth/: capabilities.rs  credentials_deserialize.rs  keys.rs
src/auth/keys/: create_key.rs  delete_key.rs  list_keys.rs
src/authorize/: keys.rs  mod.rs
src/b2_future/: b2_stream.rs  mod.rs  partial_json.rs
src/buckets/: bucket_type.rs  create_bucket.rs  delete_bucket.rs  get_bucket.rs  list_buckets.rs  mod.rs  update_bucket.rs
src/files/: action.rs  get_file_info.rs  list_file_names.rs  mod.rs  upload.rs
src/files/download/: future.rs  mod.rs  stream.rs
src/files/upload/: get_upload_url.rs  large.rs  mod.rs  upload_file.rs  upload_info.rs
src/raw/: authorize.rs  buckets.rs  download.rs  files.rs  files2.rs  mod.rs  upload.rs
src/source/: auth_source.rs  mod.rs
src/throttle/: async.rs  mod.rs
tests/: backblaze.rs  raw.rs  throttle.rs
tests_/: backblaze.rs  throttle.rs
