[package]
name = "backblaze-b2"
version = "0.2.0-development"
authors = ["Alice Ryhl <alice@ryhl.io>"]
description = "Can send api requests to the backblaze b2 api."
repository = "https://github.com/Darksonn/backblaze-b2-rs"
homepage = "https://ryhl.io/backblaze.html"
readme = "README.md"
keywords = ["backblaze", "b2", "backup", "api"]
categories = ["api-bindings"]
license = "MIT"
exclude = ["credentials.txt"]

[dependencies]
base64 = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.12"
sha1 = { version = "0.6", features = ["std"] }
percent-encoding = "1"
http = "0.1"
futures = "0.1"
tokio = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
crossbeam = "0.7.1"

[dependencies.bytes]
version = "0.4"
features = ["serde"]

[dev-dependencies]
rand = "0.5"
hyper-tls = "0.3"
