[package]
name = "backblaze-b2"
version = "0.2.0-development"
authors = ["Alice Ryhl <alice@ryhl.io>"]
description = "Can send api requests to the backblaze b2 api."
repository = "https://github.com/Darksonn/backblaze-b2-rs"
homepage = "https://ryhl.io/backblaze.html"
readme = "README.md"
keywords = ["backblaze", "b2", "backup", "api"]
categories = ["api-bindings"]
license = "MIT"
exclude = ["credentials.txt"]
edition = "2018"

[dependencies]
base64 = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha1 = { version = "0.6", features = ["std"] }
percent-encoding = "1"
http = "0.1"
tokio = "=0.2.0-alpha.6"
tokio-codec = "=0.2.0-alpha.6"
tokio-io = "=0.2.0-alpha.6"
futures-preview = "0.3.0-alpha.19"
crossbeam = "0.7.1"

[dependencies.bytes]
version = "0.4"
features = ["serde"]

[dependencies.hyper]
version = "=0.13.0-alpha.4"
features = ["unstable-stream"]

[dev-dependencies]
rand = "0.5"
