[package]
name = "backblaze-b2"
version = "0.2.0-development"
authors = ["Alice Ryhl <alice@ryhl.io>"]
description = "Can send api requests to the backblaze b2 api."
repository = "https://github.com/Darksonn/backblaze-b2-rs"
homepage = "https://ryhl.io/backblaze.html"
readme = "README.md"
keywords = ["backblaze", "b2", "backup", "api"]
categories = ["api-bindings"]
license = "MIT"
exclude = ["credentials.txt"]
edition = "2018"

[dependencies]
base64 = "0.10"
serde_json = "1.0"
sha1 = { version = "0.6", features = ["std"] }
http = "0.2"
futures = "0.3.1"
hyper-tls = "0.4.0"

[dependencies.bytes]
version = "0.5"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "0.2.5"
features = ["full"]
default-features = false

[dependencies.tokio-util]
version = "0.2.0"
features = ["codec"]
default-features = false

[dependencies.hyper]
version = "0.13.1"
features = ["stream"]
default-features = false

[dev-dependencies]
rand = "0.5"
